refactor: fields model
